# rockchip-linux-external-common_algorithm

./: CMakeLists.txt
audio/: CMakeLists.txt  Changelog.txt
audio/AEC_ANR_AGC/: CMakeLists.txt
audio/AEC_ANR_AGC/3A_PARAM/doc/: 3A代码说明.docx  lmf4说明.txt  调参说明.docx  调试说明.txt
audio/AEC_ANR_AGC/3A_PARAM/src/: RK_VoiceSetPara.c
audio/AEC_ANR_AGC/include/: RK_VOICE_ProInterface.h  wave_reader.h
audio/AEC_ANR_AGC/test/: CMakeLists.txt  test_aec_anr_agc.c
audio/ANR/: CMakeLists.txt
audio/ANR/include/: anr_provider.h
audio/rkap_3a/: CMakeLists.txt
audio/rkap_3a/test/: test_rkap_3a.c
audio/rkap_aec/: CMakeLists.txt
audio/rkap_aec/include/: AP_AEC.h  rkap_aec.h
audio/rkap_aec/test/: CMakeLists.txt  test_aec.c
audio/rkap_anr/: CMakeLists.txt
audio/rkap_anr/include/: AP_ANR.h  RKAP_ANR.h  rkap_anr.h
audio/rkap_anr/test/: CMakeLists.txt  test_anr.c  test_rkap_anr.c
audio/rkap_common/: CMakeLists.txt
audio/rkap_common/include/: AP_Common.h  rkap_common.h
audio/rkaudio_algorithms/: CMakeLists.txt
audio/rkaudio_algorithms/conf/: config_aivqe.json
audio/rkaudio_algorithms/include/: rkaudio_preprocess.h
audio/rkaudio_algorithms/uclibc/: test_aec
audio/rkskv/conf/: config_aivqe.json
misc/: CMakeLists.txt
misc/include/: audio_server.h  mp3_enc_table1.h  mp3_enc_table2.h  mp3_enc_types.h  rkdemuxer.h
video/: CMakeLists.txt
video/move_detect/: CMakeLists.txt
video/move_detect/include/: move_detection.h
video/occlusion_detect/: CMakeLists.txt
video/occlusion_detect/include/: occlusion_detection.h  od_detection.h
video/occlusion_detect/test/: occlusion_detection_test.c
